cmake_minimum_required (VERSION 2.6)

project (dynadjust)

set (DYNADJUST_VERSION "1.0.0")

message (STATUS " " )
message (STATUS "**********************************************" )
message (STATUS "Configuring DynAdjust ${DYNADJUST_VERSION} build using cmake..." )
message (STATUS " " )
set (CMAKE_BUILD_TYPE "Debug")

if(UNIX)
   set(DNA_PROGRAM_PREFIX "dna")
endif(UNIX)

set (CMAKE_MODULE_PATH "../../../..")
set (CMAKE_CXX_STANDARD 11)
add_definitions(-Wno-deprecated-declarations)

set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -ggdb -O0")

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl")
else()
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed")
endif()

message (STATUS "Looking for xerces-c..." )
find_package (XercesC COMPONENTS xerces-c REQUIRED)
if (NOT XERCESC_FOUND )
   set (DNA_BUILD_ERROR 1)
   set (XERCES_FIND_ERROR 1)
   message (SEND_ERROR "Cannot find XercesC library")
else ()
   message (STATUS "xerces-c seems to be installed correctly." )
   set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L$ENV{XERCES_BASE}/lib")
   set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -L$ENV{XERCES_BASE}/lib")
endif ()
message (STATUS " " )

message (STATUS "Looking for xsd headers..." )
find_package (XSD REQUIRED)
if (NOT XSD_FOUND )
   set (DNA_BUILD_ERROR 1)
   set (XSD_FIND_ERROR 1)
   message (SEND_ERROR "Cannot find XSD library")
else ()
   message (STATUS "xsd headers seem to be installed correctly." )
endif ()
message (STATUS " " )

message (STATUS "Looking for boost..." )
set (Boost_USE_MULTITHREADED ON)
set (BOOST_MIN_VERSION "1.58.0")
find_package (Boost ${BOOST_MIN_VERSION} COMPONENTS system filesystem timer thread program_options REQUIRED)
if (NOT Boost_FOUND )
   set (DNA_BUILD_ERROR 1)
   set (BOOST_FIND_ERROR 1)
   message (SEND_ERROR "Cannot find Boost library components")
else ()
   message (STATUS "boost seems to be installed correctly.")
   set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L$ENV{BOOST_LIBRARYDIR}")
   set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -L$ENV{BOOST_LIBRARYDIR}")
endif ()
message (STATUS " ")

message (STATUS "Looking for intel math kernel library (mkl)..." )
find_package (MKL COMPONENTS mkl_blas95_ilp64 mkl_intel_ilp64 mkl_intel_thread mkl_core REQUIRED)
if (NOT MKL_FOUND )
   set (DNA_BUILD_ERROR 1)
   set (MKL_FIND_ERROR 1)
   message (SEND_ERROR "Cannot find MKL library components")
else ()
    message (STATUS "MKL seems to be installed correctly.")
endif ()
message (STATUS " ")

find_library(IOMP5_LIB iomp5 PATHS /apps/intel-ct/16.0.3.210/common/lib/)
if( NOT IOMP5_LIB )
   set(DNA_BUILD_ERROR 1)
   set (IOMP5_FIND_ERROR 1)
   message(SEND_ERROR "Cannot find iomp5 library")
endif()

set (DNA_LIBRARIES ${Boost_LIBRARIES} ${XERCESC_LIBRARY} ${MKL_LIBRARIES} ${IOMP5_LIB})

message (STATUS "DynAdjust library dependencies:")
message (STATUS ${DNA_LIBRARIES})
message (STATUS "")

include_directories( ${CMAKE_SOURCE_DIR} ${Boost_INCLUDE_DIRS} ${MKL_INCLUDE_DIRS} ${XERCESC_INCLUDE_DIR} ${XSD_INCLUDE_DIR})

if (DNA_BUILD_ERROR)
    message (STATUS " " )
    message (STATUS "**********************************************" )
    message (STATUS "Cannot build DynaAjust ${DYNADJUST_VERSION}.  Missing components:")
if (XERCES_FIND_ERROR)
    message (STATUS "  xerces-c")
endif ()
if (XSD_FIND_ERROR)
    message (STATUS "  xsd headers")
endif ()
if (BOOST_FIND_ERROR)
    message (STATUS "  boost")
endif ()
if (MKL_FIND_ERROR)
    message (STATUS "  mkl")
endif ()
if (IOMP5_FIND_ERROR)
    message (STATUS "  iomp5")
endif ()
    message (STATUS " ")
    message (FATAL_ERROR "Build terminating.")
endif ()

message (STATUS "configuring dynadjust" )
add_subdirectory (dynadjust/dynadjust)

message (STATUS "configuring adjust" )
add_subdirectory (dynadjust/dnaadjustwrapper)

message (STATUS "configuring import" )
add_subdirectory (dynadjust/dnaimportwrapper)

message (STATUS "configuring reftran" )
add_subdirectory (dynadjust/dnareftranwrapper)

message (STATUS "configuring segment" )
add_subdirectory (dynadjust/dnasegmentwrapper)

message (STATUS "configuring geoid" )
add_subdirectory (dynadjust/dnageoidwrapper)

message (STATUS "configuring plot" )
add_subdirectory (dynadjust/dnaplotwrapper)

message (STATUS " " )
message (STATUS "finished configuring DynAdjust ${DYNADJUST_VERSION}." )
message (STATUS "**********************************************" )
message (STATUS " " )
message (STATUS "Now run make to build DynAdjust ${DYNADJUST_VERSION} binaries" )
message (STATUS " " )



